drone-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-ci-app
  namespace: default
  labels:
    app: drone-ci-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: drone-ci-app
  type: LoadBalancer
